Fixed the page height issue, also changed the image on book page to not be too big

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@ body {
   margin: 0;
 }
 
+body, #root {
+  min-height: 100vh;
+  background-color: rgb(250, 250, 217);
+}
+
 * {
   font-family: 'Playfair Display', serif;
 }
